# hakkar-packard

./: .gitignore  Makefile  README.md
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-databases.sh  (+2 more)
services/metrum/: .env.example  Makefile  README.md  alembic.ini  metrum.db  pyproject.toml  requirements.txt
services/metrum/db/migrations/: __init__.py  env.py
services/metrum/db/migrations/versions/: 71b77e78218b_create_event_queue_table.py
services/metrum/metrum/: README.md  __init__.py  cli.py  clients.py  db.py  logs.py  settings.py
services/metrum/metrum/cli/: __init__.py  cli.py  cli_db.py  cli_init.py  cli_logs.py  cli_run.py
services/metrum/metrum/client/: __init__.py  http_client.py  websocket_client.py
services/metrum/metrum/collector/: __init__.py
services/metrum/metrum/collector/log_reader/: __init__.py  create_log_reader.py  file_log_reader.py  log_monitor.py  log_reader.py
services/metrum/metrum/collector/metrics/: __init__.py  base.py  collector.py  database.py  functions.py  indexes.py  replication.py  tables.py  wal.py
services/metrum/metrum/collector/queries/: __init__.py  log_monitor.py  patterns.py  query.py  query_cache.py  query_cache_db.py
services/metrum/metrum/common/: __init__.py  logger.py
services/metrum/metrum/config/: patterns.json
services/metrum/metrum/db/: __init__.py  base.py  models.py
services/metrum/metrum/db/migrations/: __init__.py  create_log_events_table.py  run_migrations.py
services/metrum/metrum/logs/: __init__.py  log_monitor.py  log_reader.py
services/metrum/metrum/queries/: __init__.py  patterns.py  query.py  query_cache.py  query_cache_db.py
services/metrum/metrum/scripts/: run_log_monitor.py
services/metrum/metrum/settings/: __init__.py  config.py
services/metrum/metrum/sink/: __init__.py
services/metrum/metrum/sink/metric/: __init__.py  debug_sink.py  http_sink.py  sink.py  sqlite_sink.py
services/metrum/tests/: conftest.py  test_db.py  test_models.py
services/server/: .env.example  README.md  main.py  pyproject.toml  pytest.ini
services/server/models/: health.py
services/server/repositories/: __init__.py  db.py  health.py
services/server/routes/: route_handler.py
services/server/routes/v1/: __init__.py  health.py  v1.py
services/server/services/: health_service.py
services/server/tests/: README.md
services/server/tests/integration/: conftest.py  test_health_endpoint.py
services/server/tests/unit/: conftest.py  test_env.py  test_health_route.py  test_health_service.py  test_main.py  test_route_handler.py
services/server/utils/: env.py
services/test-env/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
services/test-env/docker/: postgres.conf
services/test-env/schema/: benchmark_queries.sql  financial_schema.sql
services/test-env/src/test_env/: __init__.py  __main__.py  app.py  cli.py  db.py  models.py
services/test-env/src/test_env/cli/: cli.py
services/test-env/src/test_env/cli/commands/: db.py  list.py
services/test-env/src/test_env/common/: logging_config.py
services/test-env/src/test_env/db/: models.py  session.py  views.py
services/test-env/src/test_env/db/operations/: __init__.py  connection.py  database_management.py  querying.py  schema_metadata.py  statistics.py
services/test-env/src/test_env/db/operations/analytics/: __init__.py  analytics.py
services/test-env/src/test_env/db/operations/population/: __init__.py  data_population.py
services/test-env/src/test_env/db/operations/schema/: __init__.py  schema_operations.py
services/test-env/src/test_env/settings/: config.py
services/test-env/src/test_env/ui/: __init__.py  app.py
services/test-env/tests/: __init__.py  conftest.py  test_business_logic.py  test_config.py  test_db.py
test-env/: Makefile  README.md  docker-compose.yml  pyproject.toml
test-env/docker/postgres/: postgres.conf
test-env/src/test_env/: __init__.py  __main__.py  cli.py  core.py  db.py
test-env/tests/: __init__.py  test_core.py
(+40 files in other folders)
