[project]
name = "test-env"
version = "0.1.0"
description = "A CLI application"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "asyncpg>=0.30.0",
    "click>=8.1.0",
    "psycopg2-binary>=2.9.10",
]
requires-python = ">=3.8"

[project.scripts]
test-env = "test_env.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.sdist]
include = [
    "src/test_env",
]

[tool.hatch.build.targets.wheel]
packages = ["src/test_env"] 
