[tool.poetry]
name = "metrum"
version = "0.1.0"
description = "Metrum service with HTTP and WebSocket client capabilities"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
websockets = "^12.0"
click = "^8.1.7"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
ruff = "^0.11.2"
structlog = "^25.2.0"
requests = "^2.32.4"
sqlparse = "^0.5.3"
psycopg = "^3.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
metrum = "metrum.cli:cli" 